git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12147 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 28db9f24b1e395d457f5e2ebbfa387b80ac67bae

--- a/sitac_projects/Sitac_android/res/values/strings.xml
+++ b/sitac_projects/Sitac_android/res/values/strings.xml
@@ -14,4 +14,5 @@
 <string name="yellow">Yellow</string>
 <string name="black">Black</string>
 <string name="undo">Undo</string>
+<string name="redo">Redo</string>
 </resources>
