--- a/latex_projects/latex.shared.packages/listings/emftext_bw.sty
+++ b/latex_projects/latex.shared.packages/listings/emftext_bw.sty
@@ -15,7 +15,8 @@
 morekeywords=[0]{ SYNTAXDEF, FOR, START, IMPORTS, OPTIONS, TOKENS, TOKENSTYLES, RULES},
 morekeywords=[1]{ DEFINE, COLOR },
 sensitive=true,
-% morecomment=[l]{//},
+morecomment=[s]{<}{>},   % forces the whole < > to be in italic in case of // in the URL used by EMFText
+morecomment=[l]{//},
 morecomment=[s]{/*}{*/},
 morestring=[b]",
 }
