git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12846 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 6f4eef824e4439e1e15fa8380e48938e5a93e873

--- a/kermeta_compilerv2_projects/fr.irisa.triskell.kermeta.scala.compilo/todo.txt
+++ b/kermeta_compilerv2_projects/fr.irisa.triskell.kermeta.scala.compilo/todo.txt
@@ -19,8 +19,9 @@
 	
 
 #ok 7. 	 fr.irisa.triskell.kermeta.language.structure.ConstraintType.ConstraintType =>  fr.irisa.triskell.kermeta.language.structure.ConstraintType
-dans getqualifiedNameCompilo des enum séparé le cas des enums ecore.
 
-8. Gérer les property avec body.
-9. Gérer les isVoid.
-10. Implanter toutes les méthodes du Framework
+
+NameRefAspect pas de root ni de scalaAspect  :  and((scalaUtil.Util.getMetaClass("kompose.Mergeable")).isSuperTypeOf((p).Scalatype))}
+
+file:/home/barais/NetBeansProjects/fr.irisa.triskell.kermeta.scala.compilo.output/shipshop.kompose
+
