git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@15224 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: e255e17610fab6e7dc74ddcbecc9c76f342133b2

--- a/latex_projects/latex.shared.packages/listings/kermeta_bw.sty
+++ b/latex_projects/latex.shared.packages/listings/kermeta_bw.sty
@@ -28,14 +28,14 @@ morestring=[b]",
 
 \lstset{language=kermeta_bw,
    basicstyle=\ttfamily,
-   keywordstyle=[0]\bf\color{KRed},
-   keywordstyle=[1]\bf\color{KBlue},
-   keywordstyle=[2]\textit\bf\color{KBlue},
-   keywordstyle=[3]\bf\color{KBlue},
-   keywordstyle=[4]\textit\bf\color{KPurple},
-   keywordstyle=[5]\bf\color{KBlack},
-   keywordstyle=[6]\bf\color{KPurple},
-   commentstyle=\textit\color{KOliveGreen},
+   keywordstyle=[0]\bf,
+   keywordstyle=[1]\bf,
+   keywordstyle=[2]\textit\bf,
+   keywordstyle=[3]\bf,
+   keywordstyle=[4]\textit\bf,
+   keywordstyle=[5]\bf,
+   keywordstyle=[6]\bf,
+   commentstyle=\textit,
    tabsize=2,
    breaklines=true,
 %   frame=single,
