b&w version use the same name in order to be easily replaced in a text
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@15398 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 4f3efa6fbd50bacd147275b2d23493b46a405b0a

--- a/latex_projects/latex.shared.packages/listings/emftext_bw.sty
+++ b/latex_projects/latex.shared.packages/listings/emftext_bw.sty
@@ -10,7 +10,7 @@
     [2010/09/01 0.1 black and white listings language file for EMFText]
 
 
-\lstdefinelanguage{emftext_bw}
+\lstdefinelanguage{emftext}
 {
 morekeywords=[0]{ SYNTAXDEF, FOR, START, IMPORTS, OPTIONS, TOKENS, TOKENSTYLES, RULES},
 morekeywords=[1]{ DEFINE, COLOR },
@@ -21,7 +21,7 @@ morecomment=[s]{/*}{*/},
 morestring=[b]",
 }
 
-\lstset{language=emftext_bw,
+\lstset{language=emftext,
    basicstyle=\ttfamily,
    keywordstyle=[0]\bf,
    keywordstyle=[1]\textit\bf,
